<resources xmlns:tools="http://schemas.android.com/tools">

    //layouts
    <string name="app_name">BVK</string>
    <string name="add_new_item">add new item</string>
    <string name="search_new_sample">create new sample</string>
    <string name="all_items">all items</string>
    <string name="mandrel_image">mandrel image</string>
    <string name="mandrel_name">mandrel name</string>
    <string name="mandrel">mandrel</string>
    <string name="press_if_edit_item">press if edit item</string>
    <string name="press_if_delete_item">press if delete item</string>
    <string name="create_button_label">create</string>
    <string name="access_denied">access denied</string>
    <string name="access_completed">access completed</string>

    //mandrel fragment
    <string name="mandrel_list_label">Mandrel List</string>
    <string name="sample_param_label">Sample for parameters :</string>
    <string name="package_schemas_list_label">Package Schemas List</string>



    //mandrels list adapter
    <string name="name_prefix">Mandrel:</string>
    <string name="name_separator">x</string>
    <string name="vertex_prefix">vertex diameter =</string>
    <string name="base_prefix">base diameter =</string>
    <string name="height_prefix">height =</string>
    <string name="tapper_prefix">tapper =</string>
    <string name="membrane_weight_prefix">membrane weight =</string>
    <string name="adhesive_sleeve_weight_prefix">adhesive sleeve weight =</string>
    <string name="infelicity_prefix">infelicity =</string>
    <string name="recommended_adhesive_sleeve_weight_hint">small cap, recommended adhesive sleeve weight =</string>

    //add dialog
    <string name="add_dialog_vertex_error_message">"Please, set vertex diameter"</string>
    <string name="add_dialog_base_error_message">"Please, set a base diameter"</string>
    <string name="add_dialog_height_error_message">"Please, set height"</string>
    <string name="add_button_label">add</string>
    <string name="update_button_label">update</string>
    <string name="skip_button_label" tools:ignore="ButtonCase">cancel</string>
    <string name="add_dialog_set_mandrel_data_label">set mandrel data</string>
    <string name="add_dialog_set_mandrel_vertex_diameter_hint">set mandrel vertex diameter</string>
    <string name="add_dialog_set_mandrel_base_diameter_hint">set mandrel base diameter</string>
    <string name="add_dialog_set_mandrel_height_hint">set mandrel height</string>
    <string name="add_dialog_set_mandrel_name_hint">set mandrel name</string>
    <string name="add_dialog_name_error_message">Please,set name</string>
    <string name="add_dialog_max_infelicity_height">set max infelicity height</string>
    <string name="add_dialog_unique_name_error_message">this name is already exist, change name</string>

    //sample dialog
    <string name="sample_dialog_vertex_error_message">"Please, set cap vertex diameter"</string>
    <string name="sample_dialog_height_error_message">"Please, set cap height"</string>
    <string name="sample_dialog_inversion_error_message">"Please, set inversion"</string>
    <string name="sample_dialog_amount_error_message">"Please, set amount"</string>
    <string name="sample_dialog_create_new_sample_label">create new sample</string>
    <string name="sample_dialog_set_cap_vertex_diameter_hint">set cap vertex diameter</string>
    <string name="sample_dialog_set_cap_height_hint">set cap height</string>
    <string name="click_to_clear_sample">click to clear sample</string>
    <string name="total_membrane_length">total membrane length</string>

    //developer mode dialog
    <string name="incorrect_password_error_message">Password is incorrect</string>


    <string name="menu_item_delete">delete</string>
    <string name="menu_item_update">update</string>
    <string name="confirm_restore_default_button_label">restore</string>
    <string name="nothing_to_show_label">nothing to show</string>
    <string name="enter_password_to_join_developer_mode_dialog_label">Enter password to join admin mode</string>
    <string name="enter_developer_password_developer_fragment_hint">enter developer password</string>
    <string name="enter_button_label">enter</string>
    <string name="new_sample_dialog_set_cap_inversion_hint">set cap inversion</string>
    <string name="new_sample_dialog_set_total_cap_amount_hint">set total cap amount</string>
    <string name="delete_confirm_dialog_label">A you sure about delete mandrel:</string>
    <string name="add_mandrel_dialog_infelicity_hint">set infelicity coefficient</string>
    <string name="add_dialog_infelicity_error_message">please, set mandrel infelicity</string>
    <string name="add_dialog_max_infelicity_height_error_message">please, set max infelicity height</string>
    <string name="confirmation_dialog_restore_default_label"> Are you sure about restore default? All data will be lost and app will restarted.</string>

    //actionbar
    <string name="action_bar_subtitle_operator_mode">main : operator mode</string>
    <string name="action_bar_subtitle_administrator_mode">main : administrator mode</string>
    <string name="action_bar_settings_label">settings</string>

    //schema adapter
    <string name="package_schema_name_label">schema name:</string>
    <string name="package_schema_box_type_label">box type:</string>
    <string name="schema_format_label">schema:</string>
    <string name="schema_cup_in_box_label">cap count in box:</string>
    <string name="schema_cap_in_bundle_label">cap count in bundle:</string>
    //add schema dialog
    <string name="add_schema_dialog_package_schema_data_label">package schema data</string>
    <string name="add_dialog_schema_name">set schema name</string>
    <string name="add_dialog_box_type">box type</string>
    <string name="add_dialog_first_package_line_label">first package line</string>
    <string name="add_schema_dialog_second_package_line">second package line</string>
    <string name="add_schema_dialog_cap_amount_in_box">cap amount in box</string>
    <string name="add_schema_dialog_cap_amount_in_bundle">cap amount in bundle</string>
    <string name="add_dialog_set_name_error_message">Please, set schema name</string>
    <string name="add_dialog_box_type_error_message">Please, set box type</string>
    <string name="add_dialog_first_line_count_error_message">Please, set first line count</string>
    <string name="add_dialog_second_line_error_message">Please, set second line count</string>
    <string name="add_dialog_cap_amount_in_box_error_message">Please, set cap amount in box</string>
    <string name="add_dialog_cap_in_bundle_error_message">Please, set cap amount in bundle</string>
    <string name="confirmation_dialog_delete_schema_label">Delete package schema :</string>
    <string name="confirmation_dialog_delete_mandrel_label">Delete mandrel :</string>
    <string name="add_schema_doalog_is_straight_laying_check">is straight laying</string>
    //settings activity
    <string name="settings_activity_password_group_label">password settings</string>
    <string name="settings_activity_password_label">Password</string>
    <string name="settings_activity_password_sublabel">Click to call dialog for change password</string>
    <string name="settings_activity_main_label">main settings</string>
    <string name="settings_activity_adhesive_safe_line_label">Adhesive save line</string>
    <string name="settings_activity_adhesive_safe_line_sublabel">Set safe zone to adhesive line in mm.</string>
    <string name="settings_activity_membrane_depth_label">Membrane depth</string>
    <string name="settings_activity_membrane_depth_sublabel">Set membrane depth in mkm.</string>

    <string name="settings_activity_import_export_group_label">import/export</string>
    <string name="settings_activity_export_label">Export</string>
    <string name="settings_activity_export_file_hint">Click to create database export file.</string>
    <string name="settings_activity_import_label">Import</string>
    <string name="settings_activity_import_file_hint">Click to chose database import file on your device.</string>

    //change password dialog fragment
    <string name="dialog_fragment_change_password_label">change password</string>
    <string name="dialog_fragment_change_password_old_password_hint">set old password</string>
    <string name="dialog_fragment_change_password_new_password_hint">set new password</string>
    <string name="dialog_fragment_change_password_change_button">change</string>

    <string name="add_schema_layer_count_hint">row count</string>
    <string name="add_schema_dialog_layer_count_error_message">Please, set layer count</string>

    //values format postfixes
    <string name="meter_postfix">m</string>
    <string name="millimeter_postfix">mm</string>
    <string name="micrometer_postfix">mkm</string>
    <string name="pcs_postfix">pcs</string>
    <string name="rows_postfix">rows</string>

    <string name="settings_activity_restore_default_data_label">Restore default data</string>
    <string name="settings_activity_restore_default_data_summary">Click to restore all databases and password to default.</string>

    <string name="schema_label">schema</string>
    <string name="set_value_dialog_label">set value</string>
    <string name="set_value_dialog_hint">set value</string>
    <string name="set_value_dialog_adhesive_line_label">adhesive save line</string>
    <string name="set_value_dialog_membrane_length_label">membrane length</string>

    <string name="change_password_dialog_old_password_error">Please, set old password</string>
    <string name="change_password_dialog_new_password_error">please, Set new password</string>
    <string name="change_password_dialog_incorrect_old_password_error">Incorrect old password</string>

    <string name="add_mandrel_fragment_forbidden_symbol_warning">Warning : \'~\' is forbidden symbol</string>
    <string name="add_dialog_incorrect_name_error_message">Error : the first two characters should indicate the size</string>
    <string name="succecfull_file_choose">File is chosen</string>

    //import messages
    <string name="success_import_title">SUCCESS</string>


    <string name="settings_ui_label">UI</string>
    <string name="settings_theme_container_label">Theme</string>
    <string name="settings_theme_container_desc">Click to change application theme</string>
    <string name="theme_dialog_label">theme will be displayed here</string>
    <string name="dark_theme">dark theme</string>
    <string name="light_theme">light theme</string>
    <string name="green_theme">green theme</string>
    <string name="brown_theme">brown theme</string>
    <string name="ok_btn">OK</string>
    <string name="meni_item_update_title" tools:ignore="MissingTranslation">update</string>
    <string name="menu_item_settings_title" tools:ignore="MissingTranslation">settings</string>


</resources>