<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/label_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_dialog_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/themeToggleGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_theme">

        <RadioButton
            android:id="@+id/dark"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />

        <RadioButton
            android:id="@+id/light"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

        <RadioButton
            android:id="@+id/green"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/green_theme" />

        <RadioButton
            android:id="@+id/brown"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/brown_theme" />

    </RadioGroup>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeToggleGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>