<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mandrels_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="77dp"
        android:contentDescription="@string/all_items"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="20"
        tools:listitem="@layout/mandrel_recycler_container"
        tools:spanCount="5" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:contentDescription="@string/add_new_item"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_fab"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:contentDescription="@string/search_new_sample"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_sort_alphabetically" />

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="13dp"
        android:text="@string/mandrel_list_label"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/mandrels_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clearSampleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:visibility="invisible"
        android:contentDescription="@string/click_to_clear_sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_fab"
        app:srcCompat="@drawable/ic_baseline_sample_recycler_image"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>