<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/mandrelSimpleDataLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/mandrel_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mandrel_image"
            android:src="@drawable/ic_baseline_sample_recycler_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mandrel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="21sp"
            android:text="@string/mandrel_name"
            app:layout_constraintStart_toEndOf="@id/mandrel_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mandrel_base_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/mandrel"
            app:layout_constraintStart_toEndOf="@id/mandrel_avatar"
            app:layout_constraintTop_toBottomOf="@+id/mandrel_vertex_diameter" />

        <TextView
            android:id="@+id/mandrel_vertex_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/mandrel"
            app:layout_constraintStart_toEndOf="@id/mandrel_avatar"
            app:layout_constraintTop_toBottomOf="@id/mandrel_name" />

        <TextView
            android:id="@+id/mandrel_infelicity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/mandrel"
            app:layout_constraintStart_toEndOf="@id/mandrel_avatar"
            app:layout_constraintTop_toBottomOf="@id/mandrel_height" />

        <TextView
            android:id="@+id/mandrel_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/mandrel"
            app:layout_constraintStart_toEndOf="@id/mandrel_avatar"
            app:layout_constraintTop_toBottomOf="@+id/mandrel_base_diameter" />
        <ImageButton
            android:background="@color/white"
            android:id="@+id/menu_button"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/press_if_edit_item"
            android:src="@drawable/ic_baseline_menu_24"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mandrelSampleDataLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mandrelSimpleDataLayout">
        
        <TextView
            android:id="@+id/membraneWightTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mandrel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mandrelSampleDataLayout" />

        <TextView
            android:id="@+id/adhesiveSleeveWeightTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mandrel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/membraneWightTextView"
            app:layout_constraintVertical_bias="0.045" />

        <TextView
            android:id="@+id/TotalMembraneLengthTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mandrel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adhesiveSleeveWeightTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>