<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/schemaDataLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:elevation="14dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/schema_avatar_image_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/mandrel_image"
            android:src="@drawable/ic_baseline_backpack_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/schema_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/schema_label"
            android:textSize="21sp"
            app:layout_constraintEnd_toStartOf="@+id/menu_button"
            app:layout_constraintStart_toEndOf="@id/schema_avatar_image_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/box_type_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/schema_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/schema_avatar_image_view"
            app:layout_constraintTop_toBottomOf="@+id/schema_name_text_view" />

        <TextView
            android:id="@+id/schema_signs_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/schema_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/schema_avatar_image_view"
            app:layout_constraintTop_toBottomOf="@id/box_type_text_view" />

        <TextView
            android:id="@+id/total_count_in_box_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/schema_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/schema_avatar_image_view"
            app:layout_constraintTop_toBottomOf="@id/schema_signs_text_view" />

        <TextView
            android:id="@+id/total_count_in_bundle_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/schema_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/schema_avatar_image_view"
            app:layout_constraintTop_toBottomOf="@id/total_count_in_box_text_view" />

        <com.example.bvk.ui.custom.SchemaDrawer
            android:id="@+id/schema_image"
            android:layout_width="0dp"
            android:layout_height="51dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/schema_avatar_image_view"
            app:layout_constraintTop_toBottomOf="@+id/total_count_in_bundle_text_view" />

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/card_bg"
            android:contentDescription="@string/press_if_edit_item"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/list_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>